# openapi-test-output-java-jaxrs/testapi/api/AnimalsApi.java
@@ -1,5 +1,8 @@
 package testapi.api;
 
+import io.swagger.v3.oas.annotations.enums.SecuritySchemeIn;
+import io.swagger.v3.oas.annotations.enums.SecuritySchemeType;
+import io.swagger.v3.oas.annotations.security.SecurityScheme;
 import jakarta.ws.rs.GET;
 import jakarta.ws.rs.Path;
 import jakarta.ws.rs.Produces;
@@ -8,6 +11,10 @@ import java.util.List;
 import testapi.model.Animal;
 
 @Path("/animals")
+@SecurityScheme(name = "bearerAuth", type = SecuritySchemeType.HTTP, scheme = "bearer", bearerFormat = "JWT")
+@SecurityScheme(name = "apiKeyHeader", type = SecuritySchemeType.APIKEY, in = SecuritySchemeIn.HEADER, paramName = "X-API-Key")
+@SecurityScheme(name = "apiKeyQuery", type = SecuritySchemeType.APIKEY, in = SecuritySchemeIn.QUERY, paramName = "api_key")
+@SecurityScheme(name = "oauth2", type = SecuritySchemeType.OAUTH2)
 public sealed interface AnimalsApi {
   @GET
   @Path("/")
